Add public visibility

--- a/genit/BUILD
+++ b/genit/BUILD
@@ -16,6 +16,8 @@ licenses(["notice"])
 
 exports_files(["LICENSE"])
 
+package(default_visibility = ["//visibility:public"])
+
 cc_library(
     name = "iterators",
     hdrs = [
