--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -3,8 +3,6 @@ module(
     name = "x_edr_genit",
 )
 
-bazel_dep(name = "abseil-cpp", version = "20230802.0", repo_name = "com_google_absl")
-
-bazel_dep(name = "rules_cc", version = "0.0.9")
-
-bazel_dep(name = "googletest", version = "1.14.0", repo_name = "com_google_googletest")
+bazel_dep(name = "abseil-cpp", version = "20240722.0.bcr.1")
+bazel_dep(name = "googletest", version = "1.15.2")
+bazel_dep(name = "rules_cc", version = "0.0.16")
